tests/compile_errors/type/006_return_type_mismatch.xr
// 006_return_type_mismatch.xr
// Expected: Compile error - return type mismatch
// Error should mention: return type, expected
fn getNumber() -> int {
    return "not a number"
}
